[gd_scene load_steps=2 format=3 uid="uid://b66eqxa2nhcxv"]

[ext_resource type="Script" path="res://enemy_spawn_point.gd" id="1_sluxj"]

[node name="EnemySpawnPoint" type="Marker2D"]
position = Vector2(170, 209)
gizmo_extents = 8.0
script = ExtResource("1_sluxj")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="MoveTimer" type="Timer" parent="."]
autostart = true
